tests/lean/1707.lean.expected.out
1707.lean:1:9-1:10: error: unknown identifier 'c'
1707.lean:1:12: error: expected token
