tests/lean/1707.lean
def y := c.5ÿ
